stupido.output
Gramática

    0 $accept: programa $end

    1 programa: definicion_programa
    2         | definicion_paquete

    3 definicion_programa: PROGRAMA nombre ';' bloque_programa

    4 uno_o_mas_nombres: nombre
    5                  | uno_o_mas_nombres ',' nombre

    6 nombre: IDENTIFICADOR
    7       | nombre CUATRO_PTOS IDENTIFICADOR

    8 bloque_programa: declaracion_cargas declaracion_tipos declaracion_constantes declaracion_variables bloque_instrucciones

    9 definicion_paquete: PAQUETE nombre ';' seccion_cabecera seccion_cuerpo

   10 seccion_cabecera: CABECERA declaracion_cargas declaracion_tipos declaracion_constantes declaracion_variables declaracion_interfaces

   11 seccion_cuerpo: CUERPO declaracion_tipos declaracion_constantes declaracion_variables declaraciones_subprogramas

   12 declaracion_cargas: %empty
   13                   | CARGA multiple_declaracion_cargas ';'

   14 multiple_declaracion_cargas: declaracion_carga
   15                            | multiple_declaracion_cargas ',' declaracion_carga

   16 declaracion_carga: nombre
   17                  | nombre EN PATH
   18                  | nombre '(' uno_o_mas_nombres ')'
   19                  | nombre EN PATH '(' uno_o_mas_nombres ')'

   20 declaracion_tipos: %empty
   21                  | TIPO varias_declaracion_tipo

   22 varias_declaracion_tipo: declaracion_tipo
   23                        | varias_declaracion_tipo declaracion_tipo

   24 declaracion_tipo: nombre '=' tipo_no_estructurado_o_nombre_tipo ';'
   25                 | nombre '=' tipo_estructurado

   26 tipo_estructurado: tipo_registro
   27                  | declaracion_clase

   28 tipo_no_estructurado_o_nombre_tipo: nombre
   29                                   | tipo_escalar
   30                                   | tipo_fichero
   31                                   | tipo_enumerado
   32                                   | tipo_lista
   33                                   | tipo_lista_asociativa
   34                                   | tipo_conjunto

   35 tipo_escalar: ENTERO
   36             | REAL
   37             | BOOLEANO
   38             | CARACTER
   39             | CADENA

   40 tipo_fichero: FICHERO

   41 tipo_enumerado: '(' varias_expresiones_constantes ')'

   42 tipo_lista: LISTA DE tipo_no_estructurado_o_nombre_tipo
   43           | LISTA '[' varios_rango ']' DE tipo_no_estructurado_o_nombre_tipo

   44 tipo_lista_asociativa: LISTA ASOCIATIVA DE tipo_no_estructurado_o_nombre_tipo

   45 tipo_conjunto: CONJUNTO DE tipo_no_estructurado_o_nombre_tipo

   46 tipo_registro: REGISTRO '{' varias_declaraciones_campo '}'

   47 varias_declaraciones_campo: declaracion_campo
   48                           | varias_declaraciones_campo declaracion_campo

   49 declaracion_campo: uno_o_mas_nombres ':' tipo_no_estructurado_o_nombre_tipo ';'

   50 varios_rango: rango
   51             | varios_rango ',' rango

   52 rango: expresion DOS_PTOS expresion
   53      | expresion DOS_PTOS expresion DOS_PTOS expresion

   54 declaracion_constantes: %empty
   55                       | CONSTANTE varias_declaracion_constantes

   56 varias_declaracion_constantes: declaracion_constante
   57                              | varias_declaracion_constantes declaracion_constante

   58 declaracion_constante: nombre ':' tipo_no_estructurado_o_nombre_tipo '=' valor_constante ';'

   59 valores_constantes: valor_constante
   60                   | valores_constantes ',' valor_constante

   61 valor_constante: expresion
   62                | '[' valores_constantes ']'
   63                | '[' claves_valores ']'
   64                | '[' campos_valores ']'

   65 claves_valores: clave_valor
   66               | claves_valores ',' clave_valor

   67 clave_valor: CTC_CADENA FLECHA_DOBLE valor_constante

   68 campos_valores: campo_valor
   69               | campos_valores ',' campo_valor

   70 campo_valor: nombre FLECHA_DOBLE valor_constante

   71 declaracion_variables: %empty
   72                      | VARIABLE varias_declaracion_variables

   73 varias_declaracion_variables: declaracion_variable
   74                             | varias_declaracion_variables declaracion_variable

   75 declaracion_variable: uno_o_mas_nombres ':' tipo_no_estructurado_o_nombre_tipo ';'
   76                     | uno_o_mas_nombres ':' tipo_no_estructurado_o_nombre_tipo '=' valor_constante ';'

   77 declaracion_interfaces: %empty
   78                       | INTERFAZ varias_cabeceras_subprogramas

   79 varias_cabeceras_subprogramas: cabecera_subprograma ';'
   80                              | varias_cabeceras_subprogramas cabecera_subprograma ';'

   81 declaracion_clase: CLASE final '{' declaraciones_publicas ceroOuna_declaraciones_semi ceroOuna_declaraciones_privadas '}'
   82                  | CLASE final '(' uno_o_mas_nombres ')' '{' declaraciones_publicas ceroOuna_declaraciones_semi ceroOuna_declaraciones_privadas '}'

   83 final: %empty
   84      | FINAL

   85 ceroOuna_declaraciones_semi: %empty
   86                            | declaraciones_semi

   87 ceroOuna_declaraciones_privadas: %empty
   88                                | declaraciones_privadas

   89 declaraciones_publicas: PUBLICO varias_declaraciones_componentes
   90                       | varias_declaraciones_componentes

   91 declaraciones_semi: SEMIPUBLICO varias_declaraciones_componentes

   92 declaraciones_privadas: PRIVADO varias_declaraciones_componentes

   93 varias_declaraciones_componentes: declaracion_componente
   94                                 | varias_declaraciones_componentes declaracion_componente

   95 declaracion_componente: declaracion_tipo_anidado
   96                       | declaracion_constante_anidada
   97                       | declaracion_atributos
   98                       | cabecera_subprograma ';'
   99                       | cabecera_subprograma ';' modificadores ';'

  100 declaracion_tipo_anidado: TIPO declaracion_tipo

  101 declaracion_constante_anidada: CONSTANTE declaracion_constante

  102 declaracion_atributos: uno_o_mas_nombres ':' tipo_no_estructurado_o_nombre_tipo ';'

  103 modificadores: modificador
  104              | modificadores ',' modificador

  105 modificador: GENERICO
  106            | ABSTRACTO
  107            | ESPECIFICO
  108            | FINAL

  109 declaraciones_subprogramas: declaracion_subprograma
  110                           | declaraciones_subprogramas declaracion_subprograma

  111 declaracion_subprograma: cabecera_subprograma bloque_subprograma

  112 cabecera_subprograma: cabecera_funcion
  113                     | cabecera_procedimiento
  114                     | cabecera_constructor
  115                     | cabecera_destructor

  116 cabecera_funcion: FUNCION nombre declaracion_parametros FLECHA_DOBLE tipo_no_estructurado_o_nombre_tipo

  117 cabecera_procedimiento: PROCEDIMIENTO nombre declaracion_parametros

  118 cabecera_constructor: CONSTRUCTOR nombre declaracion_parametros

  119 cabecera_destructor: DESTRUCTOR nombre

  120 declaracion_parametros: %empty
  121                       | '(' lista_parametros_formales ')'

  122 lista_parametros_formales: parametros_formales
  123                          | lista_parametros_formales ';' parametros_formales

  124 parametros_formales: uno_o_mas_nombres ':' tipo_no_estructurado_o_nombre_tipo
  125                    | uno_o_mas_nombres ':' tipo_no_estructurado_o_nombre_tipo MODIFICABLE

  126 bloque_subprograma: declaracion_tipos declaracion_constantes declaracion_variables bloque_instrucciones

  127 bloque_instrucciones: '{' uno_o_mas_instrucciones '}'

  128 uno_o_mas_instrucciones: instruccion
  129                        | uno_o_mas_instrucciones instruccion

  130 instruccion: ';'
  131            | instruccion_asignacion
  132            | instruccion_salir
  133            | instruccion_devolver
  134            | instruccion_llamada
  135            | instruccion_si
  136            | instruccion_casos
  137            | instruccion_bucle
  138            | instruccion_probar_excepto
  139            | instruccion_lanzar

  140 instruccion_asignacion: objeto '=' expresion ';'

  141 instruccion_salir: SALIR ';'
  142                  | SALIR SI expresion ';'

  143 instruccion_devolver: DEVOLVER expresion ';'
  144                     | DEVOLVER ';'

  145 instruccion_llamada: llamada_subprograma ';'

  146 llamada_subprograma: nombre '(' cero_o_mas_expresiones ')'

  147 instruccion_si: SI expresion ENTONCES bloque_instrucciones
  148               | SI expresion ENTONCES bloque_instrucciones SINO bloque_instrucciones

  149 instruccion_casos: EN CASO expresion ES uno_o_mas_casos ';'

  150 uno_o_mas_casos: caso
  151                | uno_o_mas_casos caso

  152 caso: CUANDO entradas FLECHA_DOBLE bloque_instrucciones

  153 entradas: entrada
  154         | entradas '|' entrada

  155 entrada: expresion
  156        | rango
  157        | OTRO

  158 instruccion_bucle: clausula_iteracion bloque_instrucciones

  159 clausula_iteracion: PARA nombre EN objeto
  160                   | REPITE ELEMENTO nombre EN rango DESCENDENTE
  161                   | REPITE ELEMENTO nombre EN rango
  162                   | REPITE HASTA expresion
  163                   | MIENTRAS expresion

  164 instruccion_probar_excepto: PROBAR bloque_instrucciones EXCEPTO varias_clausula_excepcion
  165                           | PROBAR bloque_instrucciones EXCEPTO varias_clausula_excepcion FINALMENTE bloque_instrucciones

  166 varias_clausula_excepcion: clausula_excepcion
  167                          | varias_clausula_excepcion clausula_excepcion

  168 clausula_excepcion: CUANDO nombre EJECUTA bloque_instrucciones

  169 instruccion_lanzar: LANZAR nombre ';'

  170 cero_o_mas_expresiones: %empty
  171                       | varias_expresion

  172 varias_expresiones_constantes: expresion_constante
  173                              | varias_expresiones_constantes ',' expresion_constante

  174 varias_expresion: expresion
  175                 | varias_expresion ',' expresion

  176 expresion: expresion_logica

  177 expresion_logica: expresion_logica OR expresion_logica1
  178                 | expresion_logica1

  179 expresion_logica1: expresion_logica1 AND expresion_logica2
  180                  | expresion_logica2

  181 expresion_logica2: '!' expresion_logica3
  182                  | expresion_logica3

  183 expresion_logica3: expresion_logica3 '<' expresion_logica4
  184                  | expresion_logica3 '>' expresion_logica4
  185                  | expresion_logica3 LEQ expresion_logica4
  186                  | expresion_logica3 GEQ expresion_logica4
  187                  | expresion_logica3 EQ expresion_logica4
  188                  | expresion_logica3 NEQ expresion_logica4
  189                  | expresion_logica4

  190 expresion_logica4: expresion_logica4 '^' expresion_logica5
  191                  | expresion_logica5

  192 expresion_logica5: expresion_logica5 '@' expresion_logica6
  193                  | expresion_logica6

  194 expresion_logica6: expresion_logica6 '&' expresion_logica7
  195                  | expresion_logica7

  196 expresion_logica7: expresion_logica7 DESPI expresion_logica8
  197                  | expresion_logica7 DESPD expresion_logica8
  198                  | expresion_logica8

  199 expresion_logica8: expresion_logica8 '+' expresion_logica9
  200                  | expresion_logica8 '-' expresion_logica9
  201                  | expresion_logica9

  202 expresion_logica9: expresion_logica9 '*' expresion_logica10
  203                  | expresion_logica9 '/' expresion_logica10
  204                  | expresion_logica9 '%' expresion_logica10
  205                  | expresion_logica10

  206 expresion_logica10: expresion_logica11 POTENCIA expresion_logica10
  207                   | expresion_logica11

  208 expresion_logica11: '-' expresion_primaria
  209                   | expresion_primaria

  210 expresion_primaria: expresion_constante
  211                   | '(' expresion ')'
  212                   | llamada_subprograma
  213                   | objeto

  214 objeto: objeto '.' IDENTIFICADOR
  215       | objeto '[' varias_expresion ']'
  216       | nombre

  217 expresion_constante: CTC_ENTERA
  218                    | CTC_REAL
  219                    | CTC_CADENA
  220                    | CTC_CARACTER
  221                    | CTC_BOOLEANA


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33) 181
'%' (37) 204
'&' (38) 194
'(' (40) 18 19 41 82 121 146 211
')' (41) 18 19 41 82 121 146 211
'*' (42) 202
'+' (43) 199
',' (44) 5 15 51 60 66 69 104 173 175
'-' (45) 200 208
'.' (46) 214
'/' (47) 203
':' (58) 49 58 75 76 102 124 125
';' (59) 3 9 13 24 49 58 75 76 79 80 98 99 102 123 130 140 141 142
    143 144 145 149 169
'<' (60) 183
'=' (61) 24 25 58 76 140
'>' (62) 184
'@' (64) 192
'[' (91) 43 62 63 64 215
']' (93) 43 62 63 64 215
'^' (94) 190
'{' (123) 46 81 82 127
'|' (124) 154
'}' (125) 46 81 82 127
error (256)
ABSTRACTO (258) 106
AND (259) 179
ASOCIATIVA (260) 44
BOOLEANO (261) 37
CABECERA (262) 10
CADENA (263) 39
CASO (264) 149
CARACTER (265) 38
CARGA (266) 13
CLASE (267) 81 82
CONJUNTO (268) 45
CONSTANTE (269) 55 101
CUERPO (270) 11
CTC_BOOLEANA (271) 221
CTC_CADENA (272) 67 219
CTC_CARACTER (273) 220
CTC_ENTERA (274) 217
CTC_REAL (275) 218
CONSTRUCTOR (276) 118
CUANDO (277) 152 168
CUATRO_PTOS (278) 7
DESCENDENTE (279) 160
DESPD (280) 197
DESPI (281) 196
DESTRUCTOR (282) 119
DE (283) 42 43 44 45
DEVOLVER (284) 143 144
DOS_PTOS (285) 52 53
EJECUTA (286) 168
ELEMENTO (287) 160 161
EN (288) 17 19 149 159 160 161
ENTERO (289) 35
ENTONCES (290) 147 148
EQ (291) 187
ES (292) 149
ESPECIFICO (293) 107
EXCEPTO (294) 164 165
FICHERO (295) 40
FINAL (296) 84 108
FINALMENTE (297) 165
FLECHA_DOBLE (298) 67 70 116 152
FUNCION (299) 116
GEQ (300) 186
GENERICO (301) 105
HASTA (302) 162
IDENTIFICADOR (303) 6 7 214
INTERFAZ (304) 78
LANZAR (305) 169
LEQ (306) 185
LISTA (307) 42 43 44
MIENTRAS (308) 163
MODIFICABLE (309) 125
NEQ (310) 188
OTRO (311) 157
OR (312) 177
PAQUETE (313) 9
PARA (314) 159
PATH (315) 17 19
POTENCIA (316) 206
PRIVADO (317) 92
PROBAR (318) 164 165
PROCEDIMIENTO (319) 117
PROGRAMA (320) 3
PUBLICO (321) 89
REAL (322) 36
REGISTRO (323) 46
REPITE (324) 160 161 162
SALIR (325) 141 142
SEMIPUBLICO (326) 91
SI (327) 142 147 148
SINO (328) 148
TIPO (329) 21 100
VARIABLE (330) 72


No terminales con las reglas donde aparecen

$accept (99)
    en la izquierda: 0
programa (100)
    en la izquierda: 1 2, en la derecha: 0
definicion_programa (101)
    en la izquierda: 3, en la derecha: 1
uno_o_mas_nombres (102)
    en la izquierda: 4 5, en la derecha: 5 18 19 49 75 76 82 102 124
    125
nombre (103)
    en la izquierda: 6 7, en la derecha: 3 4 5 7 9 16 17 18 19 24 25
    28 58 70 116 117 118 119 146 159 160 161 168 169 216
bloque_programa (104)
    en la izquierda: 8, en la derecha: 3
definicion_paquete (105)
    en la izquierda: 9, en la derecha: 2
seccion_cabecera (106)
    en la izquierda: 10, en la derecha: 9
seccion_cuerpo (107)
    en la izquierda: 11, en la derecha: 9
declaracion_cargas (108)
    en la izquierda: 12 13, en la derecha: 8 10
multiple_declaracion_cargas (109)
    en la izquierda: 14 15, en la derecha: 13 15
declaracion_carga (110)
    en la izquierda: 16 17 18 19, en la derecha: 14 15
declaracion_tipos (111)
    en la izquierda: 20 21, en la derecha: 8 10 11 126
varias_declaracion_tipo (112)
    en la izquierda: 22 23, en la derecha: 21 23
declaracion_tipo (113)
    en la izquierda: 24 25, en la derecha: 22 23 100
tipo_estructurado (114)
    en la izquierda: 26 27, en la derecha: 25
tipo_no_estructurado_o_nombre_tipo (115)
    en la izquierda: 28 29 30 31 32 33 34, en la derecha: 24 42 43
    44 45 49 58 75 76 102 116 124 125
tipo_escalar (116)
    en la izquierda: 35 36 37 38 39, en la derecha: 29
tipo_fichero (117)
    en la izquierda: 40, en la derecha: 30
tipo_enumerado (118)
    en la izquierda: 41, en la derecha: 31
tipo_lista (119)
    en la izquierda: 42 43, en la derecha: 32
tipo_lista_asociativa (120)
    en la izquierda: 44, en la derecha: 33
tipo_conjunto (121)
    en la izquierda: 45, en la derecha: 34
tipo_registro (122)
    en la izquierda: 46, en la derecha: 26
varias_declaraciones_campo (123)
    en la izquierda: 47 48, en la derecha: 46 48
declaracion_campo (124)
    en la izquierda: 49, en la derecha: 47 48
varios_rango (125)
    en la izquierda: 50 51, en la derecha: 43 51
rango (126)
    en la izquierda: 52 53, en la derecha: 50 51 156 160 161
declaracion_constantes (127)
    en la izquierda: 54 55, en la derecha: 8 10 11 126
varias_declaracion_constantes (128)
    en la izquierda: 56 57, en la derecha: 55 57
declaracion_constante (129)
    en la izquierda: 58, en la derecha: 56 57 101
valores_constantes (130)
    en la izquierda: 59 60, en la derecha: 60 62
valor_constante (131)
    en la izquierda: 61 62 63 64, en la derecha: 58 59 60 67 70 76
claves_valores (132)
    en la izquierda: 65 66, en la derecha: 63 66
clave_valor (133)
    en la izquierda: 67, en la derecha: 65 66
campos_valores (134)
    en la izquierda: 68 69, en la derecha: 64 69
campo_valor (135)
    en la izquierda: 70, en la derecha: 68 69
declaracion_variables (136)
    en la izquierda: 71 72, en la derecha: 8 10 11 126
varias_declaracion_variables (137)
    en la izquierda: 73 74, en la derecha: 72 74
declaracion_variable (138)
    en la izquierda: 75 76, en la derecha: 73 74
declaracion_interfaces (139)
    en la izquierda: 77 78, en la derecha: 10
varias_cabeceras_subprogramas (140)
    en la izquierda: 79 80, en la derecha: 78 80
declaracion_clase (141)
    en la izquierda: 81 82, en la derecha: 27
final (142)
    en la izquierda: 83 84, en la derecha: 81 82
ceroOuna_declaraciones_semi (143)
    en la izquierda: 85 86, en la derecha: 81 82
ceroOuna_declaraciones_privadas (144)
    en la izquierda: 87 88, en la derecha: 81 82
declaraciones_publicas (145)
    en la izquierda: 89 90, en la derecha: 81 82
declaraciones_semi (146)
    en la izquierda: 91, en la derecha: 86
declaraciones_privadas (147)
    en la izquierda: 92, en la derecha: 88
varias_declaraciones_componentes (148)
    en la izquierda: 93 94, en la derecha: 89 90 91 92 94
declaracion_componente (149)
    en la izquierda: 95 96 97 98 99, en la derecha: 93 94
declaracion_tipo_anidado (150)
    en la izquierda: 100, en la derecha: 95
declaracion_constante_anidada (151)
    en la izquierda: 101, en la derecha: 96
declaracion_atributos (152)
    en la izquierda: 102, en la derecha: 97
modificadores (153)
    en la izquierda: 103 104, en la derecha: 99 104
modificador (154)
    en la izquierda: 105 106 107 108, en la derecha: 103 104
declaraciones_subprogramas (155)
    en la izquierda: 109 110, en la derecha: 11 110
declaracion_subprograma (156)
    en la izquierda: 111, en la derecha: 109 110
cabecera_subprograma (157)
    en la izquierda: 112 113 114 115, en la derecha: 79 80 98 99 111
cabecera_funcion (158)
    en la izquierda: 116, en la derecha: 112
cabecera_procedimiento (159)
    en la izquierda: 117, en la derecha: 113
cabecera_constructor (160)
    en la izquierda: 118, en la derecha: 114
cabecera_destructor (161)
    en la izquierda: 119, en la derecha: 115
declaracion_parametros (162)
    en la izquierda: 120 121, en la derecha: 116 117 118
lista_parametros_formales (163)
    en la izquierda: 122 123, en la derecha: 121 123
parametros_formales (164)
    en la izquierda: 124 125, en la derecha: 122 123
bloque_subprograma (165)
    en la izquierda: 126, en la derecha: 111
bloque_instrucciones (166)
    en la izquierda: 127, en la derecha: 8 126 147 148 152 158 164
    165 168
uno_o_mas_instrucciones (167)
    en la izquierda: 128 129, en la derecha: 127 129
instruccion (168)
    en la izquierda: 130 131 132 133 134 135 136 137 138 139, en la derecha:
    128 129
instruccion_asignacion (169)
    en la izquierda: 140, en la derecha: 131
instruccion_salir (170)
    en la izquierda: 141 142, en la derecha: 132
instruccion_devolver (171)
    en la izquierda: 143 144, en la derecha: 133
instruccion_llamada (172)
    en la izquierda: 145, en la derecha: 134
llamada_subprograma (173)
    en la izquierda: 146, en la derecha: 145 212
instruccion_si (174)
    en la izquierda: 147 148, en la derecha: 135
instruccion_casos (175)
    en la izquierda: 149, en la derecha: 136
uno_o_mas_casos (176)
    en la izquierda: 150 151, en la derecha: 149 151
caso (177)
    en la izquierda: 152, en la derecha: 150 151
entradas (178)
    en la izquierda: 153 154, en la derecha: 152 154
entrada (179)
    en la izquierda: 155 156 157, en la derecha: 153 154
instruccion_bucle (180)
    en la izquierda: 158, en la derecha: 137
clausula_iteracion (181)
    en la izquierda: 159 160 161 162 163, en la derecha: 158
instruccion_probar_excepto (182)
    en la izquierda: 164 165, en la derecha: 138
varias_clausula_excepcion (183)
    en la izquierda: 166 167, en la derecha: 164 165 167
clausula_excepcion (184)
    en la izquierda: 168, en la derecha: 166 167
instruccion_lanzar (185)
    en la izquierda: 169, en la derecha: 139
cero_o_mas_expresiones (186)
    en la izquierda: 170 171, en la derecha: 146
varias_expresiones_constantes (187)
    en la izquierda: 172 173, en la derecha: 41 173
varias_expresion (188)
    en la izquierda: 174 175, en la derecha: 171 175 215
expresion (189)
    en la izquierda: 176, en la derecha: 52 53 61 140 142 143 147 148
    149 155 162 163 174 175 211
expresion_logica (190)
    en la izquierda: 177 178, en la derecha: 176 177
expresion_logica1 (191)
    en la izquierda: 179 180, en la derecha: 177 178 179
expresion_logica2 (192)
    en la izquierda: 181 182, en la derecha: 179 180
expresion_logica3 (193)
    en la izquierda: 183 184 185 186 187 188 189, en la derecha: 181
    182 183 184 185 186 187 188
expresion_logica4 (194)
    en la izquierda: 190 191, en la derecha: 183 184 185 186 187 188
    189 190
expresion_logica5 (195)
    en la izquierda: 192 193, en la derecha: 190 191 192
expresion_logica6 (196)
    en la izquierda: 194 195, en la derecha: 192 193 194
expresion_logica7 (197)
    en la izquierda: 196 197 198, en la derecha: 194 195 196 197
expresion_logica8 (198)
    en la izquierda: 199 200 201, en la derecha: 196 197 198 199 200
expresion_logica9 (199)
    en la izquierda: 202 203 204 205, en la derecha: 199 200 201 202
    203 204
expresion_logica10 (200)
    en la izquierda: 206 207, en la derecha: 202 203 204 205 206
expresion_logica11 (201)
    en la izquierda: 208 209, en la derecha: 206 207
expresion_primaria (202)
    en la izquierda: 210 211 212 213, en la derecha: 208 209
objeto (203)
    en la izquierda: 214 215 216, en la derecha: 140 159 213 214 215
expresion_constante (204)
    en la izquierda: 217 218 219 220 221, en la derecha: 172 173 210


Estado 0

    0 $accept: . programa $end

    PAQUETE   desplazar e ir al estado 1
    PROGRAMA  desplazar e ir al estado 2

    programa             ir al estado 3
    definicion_programa  ir al estado 4
    definicion_paquete   ir al estado 5


Estado 1

    9 definicion_paquete: PAQUETE . nombre ';' seccion_cabecera seccion_cuerpo

    IDENTIFICADOR  desplazar e ir al estado 6

    nombre  ir al estado 7


Estado 2

    3 definicion_programa: PROGRAMA . nombre ';' bloque_programa

    IDENTIFICADOR  desplazar e ir al estado 6

    nombre  ir al estado 8


Estado 3

    0 $accept: programa . $end

    $end  desplazar e ir al estado 9


Estado 4

    1 programa: definicion_programa .

    $default  reduce usando la regla 1 (programa)


Estado 5

    2 programa: definicion_paquete .

    $default  reduce usando la regla 2 (programa)


Estado 6

    6 nombre: IDENTIFICADOR .

    $default  reduce usando la regla 6 (nombre)


Estado 7

    7 nombre: nombre . CUATRO_PTOS IDENTIFICADOR
    9 definicion_paquete: PAQUETE nombre . ';' seccion_cabecera seccion_cuerpo

    CUATRO_PTOS  desplazar e ir al estado 10
    ';'          desplazar e ir al estado 11


Estado 8

    3 definicion_programa: PROGRAMA nombre . ';' bloque_programa
    7 nombre: nombre . CUATRO_PTOS IDENTIFICADOR

    CUATRO_PTOS  desplazar e ir al estado 10
    ';'          desplazar e ir al estado 12


Estado 9

    0 $accept: programa $end .

    $default  aceptar


Estado 10

    7 nombre: nombre CUATRO_PTOS . IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 13


Estado 11

    9 definicion_paquete: PAQUETE nombre ';' . seccion_cabecera seccion_cuerpo

    CABECERA  desplazar e ir al estado 14

    seccion_cabecera  ir al estado 15


Estado 12

    3 definicion_programa: PROGRAMA nombre ';' . bloque_programa

    CARGA  desplazar e ir al estado 16

    $default  reduce usando la regla 12 (declaracion_cargas)

    bloque_programa     ir al estado 17
    declaracion_cargas  ir al estado 18


Estado 13

    7 nombre: nombre CUATRO_PTOS IDENTIFICADOR .

    $default  reduce usando la regla 7 (nombre)


Estado 14

   10 seccion_cabecera: CABECERA . declaracion_cargas declaracion_tipos declaracion_constantes declaracion_variables declaracion_interfaces

    CARGA  desplazar e ir al estado 16

    $default  reduce usando la regla 12 (declaracion_cargas)

    declaracion_cargas  ir al estado 19


Estado 15

    9 definicion_paquete: PAQUETE nombre ';' seccion_cabecera . seccion_cuerpo

    CUERPO  desplazar e ir al estado 20

    seccion_cuerpo  ir al estado 21


Estado 16

   13 declaracion_cargas: CARGA . multiple_declaracion_cargas ';'

    IDENTIFICADOR  desplazar e ir al estado 6

    nombre                       ir al estado 22
    multiple_declaracion_cargas  ir al estado 23
    declaracion_carga            ir al estado 24


Estado 17

    3 definicion_programa: PROGRAMA nombre ';' bloque_programa .

    $default  reduce usando la regla 3 (definicion_programa)


Estado 18

    8 bloque_programa: declaracion_cargas . declaracion_tipos declaracion_constantes declaracion_variables bloque_instrucciones

    TIPO  desplazar e ir al estado 25

    $default  reduce usando la regla 20 (declaracion_tipos)

    declaracion_tipos  ir al estado 26


Estado 19

   10 seccion_cabecera: CABECERA declaracion_cargas . declaracion_tipos declaracion_constantes declaracion_variables declaracion_interfaces

    TIPO  desplazar e ir al estado 25

    $default  reduce usando la regla 20 (declaracion_tipos)

    declaracion_tipos  ir al estado 27


Estado 20

   11 seccion_cuerpo: CUERPO . declaracion_tipos declaracion_constantes declaracion_variables declaraciones_subprogramas

    TIPO  desplazar e ir al estado 25

    $default  reduce usando la regla 20 (declaracion_tipos)

    declaracion_tipos  ir al estado 28


Estado 21

    9 definicion_paquete: PAQUETE nombre ';' seccion_cabecera seccion_cuerpo .

    $default  reduce usando la regla 9 (definicion_paquete)


Estado 22

    7 nombre: nombre . CUATRO_PTOS IDENTIFICADOR
   16 declaracion_carga: nombre .
   17                  | nombre . EN PATH
   18                  | nombre . '(' uno_o_mas_nombres ')'
   19                  | nombre . EN PATH '(' uno_o_mas_nombres ')'

    CUATRO_PTOS  desplazar e ir al estado 10
    EN           desplazar e ir al estado 29
    '('          desplazar e ir al estado 30

    $default  reduce usando la regla 16 (declaracion_carga)


Estado 23

   13 declaracion_cargas: CARGA multiple_declaracion_cargas . ';'
   15 multiple_declaracion_cargas: multiple_declaracion_cargas . ',' declaracion_carga

    ';'  desplazar e ir al estado 31
    ','  desplazar e ir al estado 32


Estado 24

   14 multiple_declaracion_cargas: declaracion_carga .

    $default  reduce usando la regla 14 (multiple_declaracion_cargas)


Estado 25

   21 declaracion_tipos: TIPO . varias_declaracion_tipo

    IDENTIFICADOR  desplazar e ir al estado 6

    nombre                   ir al estado 33
    varias_declaracion_tipo  ir al estado 34
    declaracion_tipo         ir al estado 35


Estado 26

    8 bloque_programa: declaracion_cargas declaracion_tipos . declaracion_constantes declaracion_variables bloque_instrucciones

    CONSTANTE  desplazar e ir al estado 36

    $default  reduce usando la regla 54 (declaracion_constantes)

    declaracion_constantes  ir al estado 37


Estado 27

   10 seccion_cabecera: CABECERA declaracion_cargas declaracion_tipos . declaracion_constantes declaracion_variables declaracion_interfaces

    CONSTANTE  desplazar e ir al estado 36

    $default  reduce usando la regla 54 (declaracion_constantes)

    declaracion_constantes  ir al estado 38


Estado 28

   11 seccion_cuerpo: CUERPO declaracion_tipos . declaracion_constantes declaracion_variables declaraciones_subprogramas

    CONSTANTE  desplazar e ir al estado 36

    $default  reduce usando la regla 54 (declaracion_constantes)

    declaracion_constantes  ir al estado 39


Estado 29

   17 declaracion_carga: nombre EN . PATH
   19                  | nombre EN . PATH '(' uno_o_mas_nombres ')'

    PATH  desplazar e ir al estado 40


Estado 30

   18 declaracion_carga: nombre '(' . uno_o_mas_nombres ')'

    IDENTIFICADOR  desplazar e ir al estado 6

    uno_o_mas_nombres  ir al estado 41
    nombre             ir al estado 42


Estado 31

   13 declaracion_cargas: CARGA multiple_declaracion_cargas ';' .

    $default  reduce usando la regla 13 (declaracion_cargas)


Estado 32

   15 multiple_declaracion_cargas: multiple_declaracion_cargas ',' . declaracion_carga

    IDENTIFICADOR  desplazar e ir al estado 6

    nombre             ir al estado 22
    declaracion_carga  ir al estado 43


Estado 33

    7 nombre: nombre . CUATRO_PTOS IDENTIFICADOR
   24 declaracion_tipo: nombre . '=' tipo_no_estructurado_o_nombre_tipo ';'
   25                 | nombre . '=' tipo_estructurado

    CUATRO_PTOS  desplazar e ir al estado 10
    '='          desplazar e ir al estado 44


Estado 34

   21 declaracion_tipos: TIPO varias_declaracion_tipo .
   23 varias_declaracion_tipo: varias_declaracion_tipo . declaracion_tipo

    IDENTIFICADOR  desplazar e ir al estado 6

    $default  reduce usando la regla 21 (declaracion_tipos)

    nombre            ir al estado 33
    declaracion_tipo  ir al estado 45


Estado 35

   22 varias_declaracion_tipo: declaracion_tipo .

    $default  reduce usando la regla 22 (varias_declaracion_tipo)


Estado 36

   55 declaracion_constantes: CONSTANTE . varias_declaracion_constantes

    IDENTIFICADOR  desplazar e ir al estado 6

    nombre                         ir al estado 46
    varias_declaracion_constantes  ir al estado 47
    declaracion_constante          ir al estado 48


Estado 37

    8 bloque_programa: declaracion_cargas declaracion_tipos declaracion_constantes . declaracion_variables bloque_instrucciones

    VARIABLE  desplazar e ir al estado 49

    $default  reduce usando la regla 71 (declaracion_variables)

    declaracion_variables  ir al estado 50


Estado 38

   10 seccion_cabecera: CABECERA declaracion_cargas declaracion_tipos declaracion_constantes . declaracion_variables declaracion_interfaces

    VARIABLE  desplazar e ir al estado 49

    $default  reduce usando la regla 71 (declaracion_variables)

    declaracion_variables  ir al estado 51


Estado 39

   11 seccion_cuerpo: CUERPO declaracion_tipos declaracion_constantes . declaracion_variables declaraciones_subprogramas

    VARIABLE  desplazar e ir al estado 49

    $default  reduce usando la regla 71 (declaracion_variables)

    declaracion_variables  ir al estado 52


Estado 40

   17 declaracion_carga: nombre EN PATH .
   19                  | nombre EN PATH . '(' uno_o_mas_nombres ')'

    '('  desplazar e ir al estado 53

    $default  reduce usando la regla 17 (declaracion_carga)


Estado 41

    5 uno_o_mas_nombres: uno_o_mas_nombres . ',' nombre
   18 declaracion_carga: nombre '(' uno_o_mas_nombres . ')'

    ','  desplazar e ir al estado 54
    ')'  desplazar e ir al estado 55


Estado 42

    4 uno_o_mas_nombres: nombre .
    7 nombre: nombre . CUATRO_PTOS IDENTIFICADOR

    CUATRO_PTOS  desplazar e ir al estado 10

    $default  reduce usando la regla 4 (uno_o_mas_nombres)


Estado 43

   15 multiple_declaracion_cargas: multiple_declaracion_cargas ',' declaracion_carga .

    $default  reduce usando la regla 15 (multiple_declaracion_cargas)

